nori-rs/tui/src/nori/snapshots/nori_tui__nori__custom_model_input__tests__snapshot_with_typed_input.snap
---
source: tui/src/nori/custom_model_input.rs
expression: terminal.backend()
---
┌ Custom Model ──────────────────────────────────┐
│ Enter a model ID (e.g. claude-opus-4-8)        │
│                                                │
│ › claude-opus-4-8│                             │
│                                                │
│ Enter to submit · Esc to cancel                │
│                                                │
└────────────────────────────────────────────────┘
